Opened 7 years ago
Closed 7 years ago
#14128 closed bug (fixed)
Webpositive crashes at haiku-os.org (probably related to HaikuWebKit 1.6.4 upgrade)
Reported by: | un_spacyar | Owned by: | korli |
---|---|---|---|
Priority: | normal | Milestone: | Unscheduled |
Component: | Applications/WebPositive | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | #14131, #14132 | |
Platform: | x86 |
Description
After update to hrev51927 (x86_gcc2), I get several Webpositive crashes. One of them was in the Haiku-os.org site.
I guess it could be related to the recent upgrade in the Webkit engine.
Attachments (1)
Change History (5)
by , 7 years ago
Attachment: | WebPositive-4807-debug-07-05-2018-23-40-15.report added |
---|
comment:1 by , 7 years ago
Owner: | changed from | to
---|---|
Status: | new → assigned |
comment:2 by , 7 years ago
Blocking: | 14131 added |
---|
comment:3 by , 7 years ago
Blocking: | 14132 added |
---|
comment:4 by , 7 years ago
Resolution: | → fixed |
---|---|
Status: | assigned → closed |
Proposed fix from Adrien applied in https://git.haiku-os.org/haiku/commit/?id=ad33fd78a50fc20fc1ff3f8df85f6c09c0a619a1
Note:
See TracTickets
for help on using tickets.
In fact it appears to be related to https://git.haiku-os.org/haiku/commit/?h=hrev51926&id=630e3f1410febc1ad769822c263ccc90976852fb
I guess we try to unflatten the BAffineTransform but it is already partially deleted and its vtable is not available anymore?